Fix InputField value

--- a/public/src/html/templates/page.html
+++ b/public/src/html/templates/page.html
@@ -3,7 +3,7 @@
 
         <clever-youtube ng-switch-when="YouTubeVideo" url="component.url" width="420" height="315"></clever-youtube>
 
-        <clever-inputfield ng-switch-when="InputField" name="component.identifer" value="''" placeholder="component.placeholder" label="component.label"></clever-inputfield>
+        <clever-inputfield ng-switch-when="InputField" name="component.identifer" value="component.value" placeholder="component.placeholder" label="component.label"></clever-inputfield>
 
         <clever-label ng-switch-default text="'Component not supported yet :('"></clever-label>
 </div>
